<resources>
    <string name="app_name">Kerteszeti weboldal</string>
    <string name="user_name">Felhasználónév</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="register">Regisztráció</string>
    <string name="last_name">Vezetéknév</string>
    <string name="first_name">Keresztnév</string>
    <string name="email">Email</string>
    <string name="password_again">Jelszó mégegyszer</string>
    <string name="save">Mentés</string>
    <string name="new_password">Új jelszó</string>
    <string name="cart">🛒</string>
    <string name="buy">Vásárlás</string>

    <string-array name="main_menu_items">
        <item>-------------</item>
        <item>Profilom</item>
        <item>Kijelentkezés</item>
    </string-array>
    <string-array name="profile_menu_items">
        <item>-------------</item>
        <item>Főoldal</item>
        <item>Kijelentkezés</item>
    </string-array>
</resources>